--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy>=1.19.3
-sklearn>=0.24.0
-joblib>=1.0.0
-tqdm>=4.55.0
-xlrd>=2.0.1
-xlwt>=1.3.0
-sonpy>=1.7.5
+numpy
+sklearn
+joblib
+tqdm
+xlrd
+xlwt
+sonpy
