--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,12 @@ commands:
   test:
     steps:
       - checkout
-      - python/install-packages:
-          pkg-manager: pip
       - run:
-          name: Install pytest
+          name: Install packages
           command: |
             python --version
             pip install --upgrade pip
+            pip install --no-cache-dir -r requirements.txt
             pip install pytest
             pip install coverage
             pip install pytest-cov
