--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy
-scikit-learn
-joblib
-tqdm
-xlrd
-xlwt
-sonpy
-scipy
+numpy==1.24.3
+scikit-learn==1.2.2
+joblib==1.2.0
+tqdm==4.65.0
+xlrd==2.0.1
+xlwt==1.3.0
+sonpy==1.9.5
+scipy==1.10.1
